@@ -6,7 +6,7 @@ import java.util.List;
 
 final class SmtpUtils {
     public static List<CharSequence> toUnmodifiableList(CharSequence... sequences) {
-        return sequences != null && sequences.length != 0 ? Collections.unmodifiableList(Arrays.asList(sequences)) : Collections.emptyList();
+        return sequences != null && sequences.length != 0 ? List.copyOf(Arrays.asList(sequences)) : Collections.emptyList();
     }
 
     private SmtpUtils() {
